--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     content="Best electrical control panel manufacturer in Maharashtra. LT, MCC, PCC, VFD, PLC & SCADA panels. ISO 9001:2015 certified." />
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://ajitelectricalsindia.in" />
+  <link rel="canonical" href="https://www.ajitelectricalsindia.in" />
 
   <!-- Additional SEO -->
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
