--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <meta property="og:title" content="Ajit Electricals - Control Panel Manufacturer in Dombivli, Thane & Mumbai" />
   <meta property="og:description"
     content="ISO 9001:2015 certified manufacturer of LT, MCC, PCC, APFC, VFD panels & PLC/SCADA automation. Serving all Maharashtra & India. Get free quote!" />
-  <meta property="og:url" content="https://ajitelectricalsindia.in" />
+  <meta property="og:url" content="https://www.ajitelectricalsindia.in" />
   <meta property="og:locale" content="en_IN" />
   <meta property="og:site_name" content="Ajit Electricals" />
 
@@ -63,8 +63,8 @@
       "name": "Ajit Electricals",
       "alternateName": ["Ajit Electricals Dombivli", "Ajit Electricals Thane", "Ajit Electricals Mumbai"],
       "description": "Leading ISO 9001:2015 certified manufacturer of industrial electrical control panels (LT, MCC, PCC, APFC, VFD) and PLC/SCADA automation solutions in Dombivli, Thane, Mumbai, Maharashtra, India",
-      "url": "https://ajitelectricalsindia.in",
-      "logo": "https://ajitelectricalsindia.in/logo.png"
+      "url": "https://www.ajitelectricalsindia.in",
+      "logo": "https://www.ajitelectricalsindia.in/logo.png"
       "telephone": "+91-9967938370",
       "email": "sales@ajitelectricalsindia.in",
       "address": {
@@ -123,7 +123,7 @@
       "@type": "LocalBusiness",
       "name": "Ajit Electricals",
       "description": "Best electrical control panel manufacturer in Dombivli, Thane, Mumbai. We manufacture LT Panels, MCC Panels, PCC Panels, APFC Panels, VFD Panels, PLC & SCADA Automation Panels for industries across Maharashtra and India.",
-      "url": "https://ajitelectricalsindia.in",
+      "url": "https://www.ajitelectricalsindia.in",
       "telephone": "+91-9967938370",
       "email": "sales@ajitelectricalsindia.in",
       "priceRange": "₹₹₹",
@@ -161,7 +161,7 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "Ajit Electricals",
-      "url": "https://ajitelectricalsindia.in",
+      "url": "https://www.ajitelectricalsindia.in",
       "description": "Manufacturer of electrical control panels and automation solutions in Dombivli, Thane, Mumbai, Maharashtra"
     }
     </script>
@@ -172,11 +172,11 @@
       "@context": "https://schema.org",
       "@type": "BreadcrumbList",
       "itemListElement": [
-        {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://ajitelectricalsindia.in"},
-        {"@type": "ListItem", "position": 2, "name": "Products", "item": "https://ajitelectricalsindia.in/products"},
-        {"@type": "ListItem", "position": 3, "name": "Industries", "item": "https://ajitelectricalsindia.in/industries"},
-        {"@type": "ListItem", "position": 4, "name": "About Us", "item": "https://ajitelectricalsindia.in/about"},
-        {"@type": "ListItem", "position": 5, "name": "Contact", "item": "https://ajitelectricalsindia.in/contact"}
+        {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://www.ajitelectricalsindia.in"},
+        {"@type": "ListItem", "position": 2, "name": "Products", "item": "https://www.ajitelectricalsindia.in/products"},
+        {"@type": "ListItem", "position": 3, "name": "Industries", "item": "https://www.ajitelectricalsindia.in/industries"},
+        {"@type": "ListItem", "position": 4, "name": "About Us", "item": "https://www.ajitelectricalsindia.in/about"},
+        {"@type": "ListItem", "position": 5, "name": "Contact", "item": "https://www.ajitelectricalsindia.in/contact"}
       ]
     }
     </script>
