Updated schema from Product to Service

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       "alternateName": ["Ajit Electricals Dombivli", "Ajit Electricals Thane", "Ajit Electricals Mumbai"],
       "description": "Leading ISO 9001:2015 certified manufacturer of industrial electrical control panels (LT, MCC, PCC, APFC, VFD) and PLC/SCADA automation solutions in Dombivli, Thane, Mumbai, Maharashtra, India",
       "url": "https://www.ajitelectricalsindia.in",
-      "logo": "https://www.ajitelectricalsindia.in/logo.png"
+      "logo": "https://www.ajitelectricalsindia.in/logo.png",
       "telephone": "+91-9967938370",
       "email": "sales@ajitelectricalsindia.in",
       "address": {
