Updated image schema

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       "description": "Leading ISO 9001:2015 certified manufacturer of industrial electrical control panels (LT, MCC, PCC, APFC, VFD) and PLC/SCADA automation solutions in Dombivli, Thane, Mumbai, Maharashtra, India",
       "url": "https://www.ajitelectricalsindia.in",
       "logo": "https://www.ajitelectricalsindia.in/logo.png",
+      "image": "https://www.ajitelectricalsindia.in/logo.png",
       "telephone": "+91-9967938370",
       "email": "sales@ajitelectricalsindia.in",
       "address": {
@@ -126,6 +127,7 @@
       "url": "https://www.ajitelectricalsindia.in",
       "telephone": "+91-9967938370",
       "email": "sales@ajitelectricalsindia.in",
+      "image": "https://www.ajitelectricalsindia.in/logo.png",
       "priceRange": "₹₹₹",
       "address": {
         "@type": "PostalAddress",
